Fix schedule item alignment

--- a/sass/home/_schedule.scss
+++ b/sass/home/_schedule.scss
@@ -87,6 +87,7 @@ body.home #schedule {
 
   .schedule__item__byline {
     line-height: 2;
+    min-height: 2em;
   }
 
   @media only screen and (max-width: 700px) {
